More set-ups on footer page

--- a/footer.html
+++ b/footer.html
@@ -10,7 +10,45 @@
     <div class="container">
       <!-- Footer section -->
       <section class="footer">
-        <h1>Footer goes here</h1>
+<!--        Shopping Tools block-->
+        <div>
+          <h3><b>Shopping tools</b></h3>
+          <ul>
+            <li>Trade-In Value</li>
+            <li>Build Your Toyota</li>
+            <li>Search Inventory </li>
+            <li>Find a dealer</li>
+            <li>Shop Online With SmartPath</li>
+            <li>Local Specials</li>
+            <li>What Fits My Budget</li>
+            <li>Payment Estimator</li>
+            <li>Request a Quote</li>
+            <li>Toyota Certified Used Vehicles</li>
+            <li>Buy Parts & Accessories</li>
+          </ul>
+        </div>
+<!--        Vehicles block-->
+        <div class="vehicles">
+
+        </div>
+<!--        Helpful links block-->
+        <div class ='links'>
+
+        </div>
+<!--        owners-->
+        <div class="owners">
+
+        </div>
+<!--        About Toyota-->
+        <div class="Toyota">
+
+        </div>
+      </section>
+      <section class="contacts">
+        <h2><b>Contact Us</b></h2>
+        <p>info@codequintets.com</p>
+        <p>Economic Zone, ALU</p>
+        <p>Bumbogo, Next to Azam</p>
       </section>
     </div>
   </body>
