helpful links,owners and about toyota set-ups

--- a/footer.html
+++ b/footer.html
@@ -33,14 +33,52 @@
         </div>
 <!--        Helpful links block-->
         <div class ='links'>
+          <h3><b>HELPFUL LINKS</b></h3>
+          <ul>
+            <li>Dealers</li>
+            <li>Deals and Incentives</li>
+            <li>Audio Multimedia & Connected services</li>
+            <li>Mobile Phone Compatibility</li>
+            <li>Mobility</li>
+            <li>Toyota Fleet</li>
+            <li>Rent a Toyota</li>
+            <li>Toyota Financial</li>
+            <li>Southeast Toyota Finance</li>
+            <li>Toyota Insurance</li>
+            <li>Email Updates</li>
+          </ul>
 
         </div>
 <!--        owners-->
         <div class="owners">
+          <h3><b>OWNERS</b></h3>
+          <ul>
+            <li>Owners Home</li>
+            <li>ToyotaCre & Maintenance Plans</li>
+            <li>Safety Recalls & Service Campaigns</li>
+            <li>Service Centers</li>
+            <li>Service Specials</li>
+            <li>Safety Hub</li>
+            <li>Warning Lights</li>
+            <li>Manuals & Warranties</li>
+            <li>Service Coupons Discounts</li>
+          </ul>
 
         </div>
 <!--        About Toyota-->
         <div class="Toyota">
+          <h3><b>ABOUT TOYOTA</b></h3>
+          <ul>
+            <li>Careers</li>
+            <li>About Us</li>
+            <li>Our Company</li>
+            <li>Toyota Outfitters</li>
+            <li>Newsroom</li>
+            <li>Toyota Worldwide</li>
+            <li>Toyota Racing</li>
+            <li>TRD USA</li>
+            <li>Plant Tours</li>
+          </ul>
 
         </div>
       </section>
