Added: A shopping Tools block with a list of tools for customers, a vehicle block with a list of various types of Toyota Vehicles, a block for our CodeQuints social media Links

--- a/footer.html
+++ b/footer.html
@@ -10,6 +10,16 @@
     <div class="container">
       <!-- Footer section -->
       <section class="footer">
+<!--          <p>Accessibility <span>YOUR PRIVACY CHOICES</span></p>-->
+<!--          social links-->
+          <div>
+              <h4>Manage Preferences</h4>
+              <img src="./footer images/Facebook.png" alt="facebook">
+              <img src="./footer images/youtube.png" alt="youtube">
+              <img src="./footer images/Twitter.png" alt="X(Twitter)">
+              <img src="./footer images/Instagram.png" alt="instagram">
+              <img src="./footer images/tiktok.png" alt="tiktok">
+          </div>
 <!--        Shopping Tools block-->
         <div>
           <h3><b>Shopping tools</b></h3>
@@ -29,6 +39,20 @@
         </div>
 <!--        Vehicles block-->
         <div class="vehicles">
+            <h3><b>VEHICLES</b></h3>
+            <ul>
+                <li>All Toyota Vehicles</li>
+                <li>SUVs</li>
+                <li>Trucks</li>
+                <li>Cars</li>
+                <li>Crossovers</li>
+                <li>Electrified Vehicles</li>
+                <li>Hybrids</li>
+                <li>Hybrid Cars</li>
+                <li>Hybrid SUVs</li>
+                <li>TRD Pro Series</li>
+                <li>Nightshade Series</li>
+            </ul>
 
         </div>
 <!--        Helpful links block-->
