Added: A shopping Tools block with a list of tools for customers, a vehicle block with a list of various types of Toyota Vehicles, a block for our CodeQuintets social media Links

--- a/footer.html
+++ b/footer.html
@@ -12,7 +12,7 @@
       <section class="footer">
 <!--          <p>Accessibility <span>YOUR PRIVACY CHOICES</span></p>-->
 <!--          social links-->
-          <div>
+          <div style="background-color: black">
               <h4>Manage Preferences</h4>
               <img src="./footer images/Facebook.png" alt="facebook">
               <img src="./footer images/youtube.png" alt="youtube">
