added CodeQuintets slogan

--- a/footer.html
+++ b/footer.html
@@ -107,10 +107,16 @@
         </div>
       </section>
       <section class="contacts">
+        <div>
+          <h2><b>CodeQuintets</b></h2>
+          <p>Your trusted e-commerce site for cars. Find the best deals on new and used cars from top brands.</p>
+        </div>
+        <div>
         <h2><b>Contact Us</b></h2>
         <p>info@codequintets.com</p>
         <p>Economic Zone, ALU</p>
         <p>Bumbogo, Next to Azam</p>
+        </div>
       </section>
     </div>
   </body>
