Created the cars list

--- a/carList.html
+++ b/carList.html
@@ -9,6 +9,73 @@
   <body>
     <div class="container">
       <!-- Car Listings section -->
+      <div class="car__container">
+        <div class="list1">
+          <div class="car1">
+            <img src="./images/car-3.jpg" alt="car 1" class="images">
+            <h3>2024</h3>
+            <h2>4Runner</h2>
+            <h3>$40705</h3>
+            <h4>Starting MSRP*</h4>
+            <p>Up to Est MPG*</p>
+            <button>Explore</button>
+          </div>
+
+          <div class="car2">
+            <img src="./images/car-5.jpg" alt="car 2" class="images">
+            <h3>2024</h3>
+            <h2>Corolla</h2>
+            <h3>$22050</h3>
+            <h4>Starting MSRP*</h4>
+            <p>Up to Est MPG*</p>
+            <button>Explore</button>
+          </div>
+
+          <div class="car3">
+            <img src="./images/car-4.jpg" alt="car 3" class="images">
+            <h3>2024</h3>
+            <h2>Camry Hybrid</h2>
+            <h3>$28855</h3>
+            <h4>Starting MSRP*</h4>
+            <p>Up to Est MPG*</p>
+            <button>Explore</button>
+          </div>
+
+        </div>
+
+        <div class="list2">
+          <div class="car4">
+            <img src="./images/car-1.png" alt="car 4" class="images">
+            <h3>2024</h3>
+            <h2>Camry Hybrid</h2>
+            <h3>$28855</h3>
+            <h4>Starting MSRP*</h4>
+            <p>Up to Est MPG*</p>
+            <button>Explore</button>
+          </div>
+
+          <div class="car5">
+            <img src="./images/car-6.png" alt="car 5" class="images">
+            <h3>2024</h3>
+            <h2>Camry Hybrid</h2>
+            <h3>$28855</h3>
+            <h4>Starting MSRP*</h4>
+            <p>Up to Est MPG*</p>
+            <button>Explore</button>
+          </div>
+
+          <div class="car6">
+            <img src="./images/car-5.jpg" alt="car 6" class="images">
+            <h3>2024</h3>
+            <h2>Camry Hybrid</h2>
+            <h3>$28855</h3>
+            <h4>Starting MSRP*</h4>
+            <p>Up to Est MPG*</p>
+            <button>Explore</button>
+          </div>
+        </div>
+
+      </div>
       <section>
         <h1>Cars List section goes here</h1>
       </section>
