chore: checkout car banner

--- a/checkout.html
+++ b/checkout.html
@@ -10,7 +10,14 @@
     <div class="checkout__container">
       <!-- car container section -->
       <section class="car__container">
-        <h1>Car Image and details goes here</h1>
+        <div class="car__description">
+          <h5>Vehicle Reservation</h5>
+          <h2>$960.50</h2>
+        </div>
+        <img src="images/car-1.png" alt="Car" />
+        <div class="car__footer">
+          <p>Powered by <span>CodeQuintent</span></p>
+        </div>
       </section>
 
       <!-- Checkout form section -->
