--- a/carList.html
+++ b/carList.html
@@ -11,7 +11,7 @@
       <!-- Car Listings section -->
       <div class="car__container">
         <div class="list1">
-          <div class="car1">
+          <div class="car-layout">
             <img src="./images/car-3.jpg" alt="car 1" class="images">
             <h3>2024</h3>
             <h2>4Runner</h2>
@@ -21,8 +21,8 @@
             <button>Explore</button>
           </div>
 
-          <div class="car2">
-            <img src="./images/car-5.jpg" alt="car 2" class="images">
+          <div class="car-layout">
+            <img src="./images/car-8.jpg" alt="car 2" class="images">
             <h3>2024</h3>
             <h2>Corolla</h2>
             <h3>$22050</h3>
@@ -31,7 +31,7 @@
             <button>Explore</button>
           </div>
 
-          <div class="car3">
+          <div class="car-layout">
             <img src="./images/car-4.jpg" alt="car 3" class="images">
             <h3>2024</h3>
             <h2>Camry Hybrid</h2>
@@ -44,17 +44,17 @@
         </div>
 
         <div class="list2">
-          <div class="car4">
+          <div class="car-layout">
             <img src="./images/car-1.png" alt="car 4" class="images">
             <h3>2024</h3>
             <h2>Camry Hybrid</h2>
             <h3>$28855</h3>
             <h4>Starting MSRP*</h4>
             <p>Up to Est MPG*</p>
-            <button>Explore</button>
+            <a href="checkout.html" class="button">Explore</a>
           </div>
 
-          <div class="car5">
+          <div class="car-layout">
             <img src="./images/car-6.png" alt="car 5" class="images">
             <h3>2024</h3>
             <h2>Camry Hybrid</h2>
@@ -64,8 +64,8 @@
             <button>Explore</button>
           </div>
 
-          <div class="car6">
-            <img src="./images/car-5.jpg" alt="car 6" class="images">
+          <div class="car-layout">
+            <img src="./images/car-7.jpg" alt="car 6" class="images">
             <h3>2024</h3>
             <h2>Camry Hybrid</h2>
             <h3>$28855</h3>
@@ -76,9 +76,6 @@
         </div>
 
       </div>
-      <section>
-        <h1>Cars List section goes here</h1>
-      </section>
     </div>
   </body>
 </html>
