--- a/checkout.html
+++ b/checkout.html
@@ -22,7 +22,72 @@
 
       <!-- Checkout form section -->
       <section class="checkoutForm__container">
-        <h1>Checkout form goes here</h1>
+        <form action="checkout.php" method="POST">
+          <div class="form__group">
+            <label for="email">Email</label>
+            <input
+              type="email"
+              id="email"
+              name="email"
+              required
+              placeholder="example@company.com"
+            />
+          </div>
+          <div class="form__group">
+            <label for="card">Card Details</label>
+            <div class="cardInput__container">
+              <input
+                type="text"
+                id="card"
+                name="card"
+                required
+                placeholder="XXXX-XXXX-XXXX-XXXX"
+              />
+              <img src="images/visa-logo-png-2026.png" alt="Visa" />
+            </div>
+            <div class="form__row">
+              <div class="form__group">
+                <input
+                  type="text"
+                  id="exp"
+                  name="exp"
+                  required
+                  placeholder="MM/YY"
+                />
+              </div>
+              <div class="form__group">
+                <input
+                  type="text"
+                  id="cvv"
+                  name="cvv"
+                  required
+                  placeholder="CVV"
+                />
+              </div>
+            </div>
+          </div>
+          <div class="form__group">
+            <label for="name">Full Name</label>
+            <input
+              type="text"
+              id="name"
+              name="name"
+              required
+              placeholder="e.g: John Doe"
+            />
+          </div>
+          <div class="form__group">
+            <label for="address">Shipping Address</label>
+            <input
+              type="text"
+              id="address"
+              name="address"
+              required
+              placeholder="e.g: 1234 Main St"
+            />
+          </div>
+          <button type="submit">Pay $960.50</button>
+        </form>
       </section>
     </div>
     <script src="scripts/checkout.js"></script>
