--- a/checkout.html
+++ b/checkout.html
@@ -22,14 +22,13 @@
 
       <!-- Checkout form section -->
       <section class="checkoutForm__container">
-        <form action="checkout.php" method="POST">
+        <form id="checkoutForm">
           <div class="form__group">
             <label for="email">Email</label>
             <input
               type="email"
               id="email"
               name="email"
-              required
               placeholder="example@company.com"
             />
           </div>
@@ -40,29 +39,16 @@
                 type="text"
                 id="card"
                 name="card"
-                required
-                placeholder="XXXX-XXXX-XXXX-XXXX"
+                placeholder="1234 5678 9012 3456"
               />
               <img src="images/visa-logo-png-2026.png" alt="Visa" />
             </div>
             <div class="form__row">
               <div class="form__group">
-                <input
-                  type="text"
-                  id="exp"
-                  name="exp"
-                  required
-                  placeholder="MM/YY"
-                />
+                <input type="text" id="exp" name="exp" placeholder="MM/YY" />
               </div>
               <div class="form__group">
-                <input
-                  type="text"
-                  id="cvv"
-                  name="cvv"
-                  required
-                  placeholder="CVV"
-                />
+                <input type="text" id="cvv" name="cvv" placeholder="CVV" />
               </div>
             </div>
           </div>
@@ -72,7 +58,6 @@
               type="text"
               id="name"
               name="name"
-              required
               placeholder="e.g: John Doe"
             />
           </div>
@@ -82,7 +67,6 @@
               type="text"
               id="address"
               name="address"
-              required
               placeholder="e.g: 1234 Main St"
             />
           </div>
