feat: validate checkout form and display errors

--- a/checkout.html
+++ b/checkout.html
@@ -82,6 +82,7 @@
               placeholder="e.g: KG 560 ST"
             />
           </div>
+          <p class="error__message" id="error-message"></p>
           <button type="submit">Pay $960.50</button>
         </form>
       </section>
