Updated the car list

--- a/carList.html
+++ b/carList.html
@@ -47,8 +47,8 @@
           <div class="car-layout">
             <img src="./images/car-1.png" alt="car 4" class="images">
             <h3>2024</h3>
-            <h2>Camry Hybrid</h2>
-            <h3>$28855</h3>
+            <h2>Toyota Corolla</h2>
+            <h3>$28000</h3>
             <h4>Starting MSRP*</h4>
             <p>Up to Est MPG*</p>
             <a href="checkout.html" class="button">Explore</a>
@@ -57,8 +57,8 @@
           <div class="car-layout">
             <img src="./images/car-6.png" alt="car 5" class="images">
             <h3>2024</h3>
-            <h2>Camry Hybrid</h2>
-            <h3>$28855</h3>
+            <h2>Hyundai</h2>
+            <h3>$25000</h3>
             <h4>Starting MSRP*</h4>
             <p>Up to Est MPG*</p>
             <button>Explore</button>
@@ -67,8 +67,8 @@
           <div class="car-layout">
             <img src="./images/car-7.jpg" alt="car 6" class="images">
             <h3>2024</h3>
-            <h2>Camry Hybrid</h2>
-            <h3>$28855</h3>
+            <h2>Camry</h2>
+            <h3>$27550</h3>
             <h4>Starting MSRP*</h4>
             <p>Up to Est MPG*</p>
             <button>Explore</button>
