updated success page

--- a/success.html
+++ b/success.html
@@ -8,7 +8,13 @@
   </head>
   <body>
     <div class="container">
-      <h1>Payment Successful message goes here</h1>
+      <h1>
+        <img class="successful-image" src="images/successful image.jpg">
+      </h1>
+      <p class="First-paragraph">Success</p>
+      <p class="Second-paragraph">Your payment has been processed successfully</p>
+      <p class="Third-paragraph">Page will be automatically redirected to the main page or click button below.</p>
+      <button class="Button-styling">Done</button>
     </div>
   </body>
 </html>
