--- a/success.html
+++ b/success.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Payment Success</title>
-    <link rel="stylesheet" href="styles/success.css" />
-  </head>
-  <body>
+    <link rel="stylesheet" href="styles/success.css">
+</head>
+<body>
     <div class="container">
-      <h1>
-        <img class="successful-image" src="images/successful image.jpg">
-      </h1>
-      <p class="First-paragraph">Success</p>
-      <p class="Second-paragraph">Your payment has been processed successfully</p>
-      <p class="Third-paragraph">Page will be automatically redirected to the main page or click button below.</p>
-      <button class="Button-styling">Done</button>
+      <img class="successful-image" src="images/successful image.jpg">
+        <h1>Success</h1>
+        <p>Your payment has been processed successfully</p>
+        <p>Page will be automatically redirected to the main page or click the button below.</p>
+        <button> <a href="header.html">Done</a></button>
     </div>
-  </body>
+</body>
 </html>
