Made the explore button direct to the checkout form

--- a/carList.html
+++ b/carList.html
@@ -18,7 +18,7 @@
             <h3>$40705</h3>
             <h4>Starting MSRP*</h4>
             <p>Up to Est MPG*</p>
-            <button>Explore</button>
+            <a href="checkout.html?car=1" class="button">Explore</a>
           </div>
 
           <div class="car-layout">
@@ -28,7 +28,7 @@
             <h3>$22050</h3>
             <h4>Starting MSRP*</h4>
             <p>Up to Est MPG*</p>
-            <button>Explore</button>
+            <a href="checkout.html?car=2" class="button">Explore</a>
           </div>
 
           <div class="car-layout">
@@ -38,7 +38,7 @@
             <h3>$28855</h3>
             <h4>Starting MSRP*</h4>
             <p>Up to Est MPG*</p>
-            <button>Explore</button>
+            <a href="checkout.html?car=3" class="button">Explore</a>
           </div>
 
         </div>
@@ -51,7 +51,7 @@
             <h3>$28000</h3>
             <h4>Starting MSRP*</h4>
             <p>Up to Est MPG*</p>
-            <a href="checkout.html" class="button">Explore</a>
+            <a href="checkout.html?car=4" class="button">Explore</a>
           </div>
 
           <div class="car-layout">
@@ -61,7 +61,7 @@
             <h3>$25000</h3>
             <h4>Starting MSRP*</h4>
             <p>Up to Est MPG*</p>
-            <button>Explore</button>
+            <a href="checkout.html?=car5" class="button">Explore</a>
           </div>
 
           <div class="car-layout">
@@ -71,7 +71,7 @@
             <h3>$27550</h3>
             <h4>Starting MSRP*</h4>
             <p>Up to Est MPG*</p>
-            <button>Explore</button>
+            <a href="checkout.html?car=6" class="button">Explore</a>
           </div>
         </div>
 
