feat: update car images and price on checkout form by query params

--- a/checkout.html
+++ b/checkout.html
@@ -9,12 +9,12 @@
   <body>
     <div class="checkout__container">
       <!-- car container section -->
-      <section class="car__container">
+      <section class="car__container1">
         <div class="car__description">
           <h5>Vehicle Reservation</h5>
-          <h2>$960.50</h2>
+          <h2 id="carPrice">$960.50</h2>
         </div>
-        <img src="images/car-1.png" alt="Car" />
+        <img src="images/car-1.png" alt="Car" id="carImage" />
         <div class="car__footer">
           <p>Powered by <span>CodeQuintet</span></p>
         </div>
@@ -83,7 +83,7 @@
             />
           </div>
           <p class="error__message" id="error-message"></p>
-          <button type="submit">Pay $960.50</button>
+          <button type="submit" id="submitButton">Pay $960.50</button>
         </form>
       </section>
     </div>
