--- a/carList.html
+++ b/carList.html
@@ -12,7 +12,7 @@
       <div class="car__container">
         <div class="list1">
           <div class="car-layout">
-            <img src="./images/car-3.jpg" alt="car 1" class="images">
+            <img src="./images/car-3.jpg" alt="car 1" class="images" />
             <h3>2024</h3>
             <h2>4Runner</h2>
             <h3>$40705</h3>
@@ -22,7 +22,7 @@
           </div>
 
           <div class="car-layout">
-            <img src="./images/car-8.jpg" alt="car 2" class="images">
+            <img src="./images/car-8.jpg" alt="car 2" class="images" />
             <h3>2024</h3>
             <h2>Corolla</h2>
             <h3>$22050</h3>
@@ -32,7 +32,7 @@
           </div>
 
           <div class="car-layout">
-            <img src="./images/car-4.jpg" alt="car 3" class="images">
+            <img src="./images/car-4.jpg" alt="car 3" class="images" />
             <h3>2024</h3>
             <h2>Camry Hybrid</h2>
             <h3>$28855</h3>
@@ -40,12 +40,11 @@
             <p>Up to Est MPG*</p>
             <a href="checkout.html?car=3" class="button">Explore</a>
           </div>
-
         </div>
 
         <div class="list2">
           <div class="car-layout">
-            <img src="./images/car-1.png" alt="car 4" class="images">
+            <img src="./images/car-1.png" alt="car 4" class="images" />
             <h3>2024</h3>
             <h2>Toyota Corolla</h2>
             <h3>$28000</h3>
@@ -55,17 +54,17 @@
           </div>
 
           <div class="car-layout">
-            <img src="./images/car-6.png" alt="car 5" class="images">
+            <img src="./images/car-6.png" alt="car 5" class="images" />
             <h3>2024</h3>
             <h2>Hyundai</h2>
             <h3>$25000</h3>
             <h4>Starting MSRP*</h4>
             <p>Up to Est MPG*</p>
-            <a href="checkout.html?=car5" class="button">Explore</a>
+            <a href="checkout.html?car=5" class="button">Explore</a>
           </div>
 
           <div class="car-layout">
-            <img src="./images/car-7.jpg" alt="car 6" class="images">
+            <img src="./images/car-7.jpg" alt="car 6" class="images" />
             <h3>2024</h3>
             <h2>Camry</h2>
             <h3>$27550</h3>
@@ -74,7 +73,6 @@
             <a href="checkout.html?car=6" class="button">Explore</a>
           </div>
         </div>
-
       </div>
     </div>
   </body>
