feat: merge header, carList and footer in index page

--- a/checkout.html
+++ b/checkout.html
@@ -16,7 +16,7 @@
         </div>
         <img src="images/car-1.png" alt="Car" id="carImage" />
         <div class="car__footer">
-          <p>Powered by <span>CodeQuintet</span></p>
+          <p>Powered by <span>CodeQuintets</span></p>
         </div>
       </section>
 
