fixed header issues

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CodeQuintets Cars</title>
-    <link rel="stylesheet" href="styles/header.css" />
+    
     <link rel="stylesheet" href="styles/carList.css" />
     <link rel="stylesheet" href="styles/footer.css" />
+    <link rel="stylesheet" href="styles/header.css" />
   </head>
   <body>
     <!-- Header -->
@@ -14,7 +15,7 @@
       <div class="top-bar">
         <div class="header__container">
           <div class="contact-info">
-            <p>39TH ROAD ST, NEW YORK, US 00123 | +1-917-338-6823</p>
+            <p>Economic Zone, ALU,Next to Azam| +250-7888-890-91</p>
           </div>
           <div class="auth-links">
             <a href="#">Sign In</a> | <a href="#">Register</a>
@@ -22,9 +23,9 @@
         </div>
       </div>
       <nav class="navbar">
-        <div class="container">
+        <div class="header__container">
           <a class="navbar-brand" href="#">
-            <h1>Vintage Classic Car</h1>
+            <h1>CodeQuintets Cars</h1>
             <p>Quality & Service</p>
           </a>
           <div class="navbar-links">
@@ -46,11 +47,12 @@
         <h1>Car M5 Gran Turismo</h1>
         <p>Model 2017</p>
         <p>$64,000</p>
+        <br />
         <a href="#" class="btn">See Details</a>
       </div>
     </section>
     <section class="search-bar">
-      <div class="container">
+      <div class="header__container">
         <form>
           <select>
             <option value="">Any Make</option>
